syntax = "proto3";

package room;

service RoomService {
  rpc CreateRoom (RoomInput) returns (Room) {}
  rpc GetRoomById (RoomRequest) returns (Room) {}
  rpc ListRooms (Empty) returns (RoomList) {}
}

message RoomInput {
  string number = 1;
  string type = 2;
  double price = 3;
}

message Room {
  string room_id = 1;
  string number = 2;
  string type = 3;
  double price = 4;
}

message RoomRequest {
  string room_id = 1;
}

message RoomList {
  repeated Room rooms = 1;
}

message Empty {}
